# wgsl-parser

./: CMakeLists.txt  README.md  fips.yml
assets/: compute-wgpu.wgsl  particle_compute.wgsl  particle_render.wgsl
lib/: test.c  wgsl-parser.c  wgsl-parser.h
parser/: .clang-format  .clangd  CMakeLists.txt  test.c  wgsl-parser.c  wgsl-parser.h
